i18n for account.create.form.jspf

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -1,5 +1,16 @@
+account_create_form.title = Add account
+account_create_form.name = Name
+account_create_form.uid = UID
+account_create_form.currency = Currency
+account_create_form.submit = Submit
 
-header_jspf.anchor.all_orders = All orders
+
+
+
+
+
+
+.anchor.all_orders = All orders
 header_jspf.anchor.login      = Login
 header_jspf.anchor.logout     = Logout
 header_jspf.anchor.menu       = Menu
