--- a/src/main/resources/resources_uk.properties
+++ b/src/main/resources/resources_uk.properties
@@ -1,3 +1,12 @@
+account_create_form.title = Додати рахунок
+account_create_form.name = Назва
+account_create_form.uid = UID
+account_create_form.currency = Валюта
+account_create_form.submit = Створити
+
+
+
+
 
 header_jspf.anchor.all_orders = \u0417\u0430\u043A\u0430\u0437\u044B
 header_jspf.anchor.login      = \u0412\u043E\u0439\u0442\u0438
@@ -21,4 +30,4 @@ login_jsp.label.password = \u041F\u0430\u0440\u043E\u043B\u044C
 settings_jsp.button.update = \u041E\u0431\u043D\u043E\u0432\u0438\u0442\u044C
 settings_jsp.label.first_name = \u0418\u043C\u044F
 settings_jsp.label.last_name = \u0424\u0430\u043C\u0438\u043B\u0438\u044F
-settings_jsp.label.localization = \u041B\u043E\u043A\u0430\u043B\u0438\u0437\u0430\u0446\u0438\u044F
+settings_jsp.label.localization = Локалізація
