i18n for card.create.form.jspf

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -4,7 +4,11 @@ account_create_form.uid = UID
 account_create_form.currency = Currency
 account_create_form.submit = Submit
 
-
+card_create_from.title = Add card
+card_create_from.card_name = Name
+card_create_from.card_number = Card number
+card_create_from.expiration_date = Expiration date
+card_create_from.submit = Submit
 
 
 
