--- a/src/main/resources/resources_uk.properties
+++ b/src/main/resources/resources_uk.properties
@@ -4,7 +4,11 @@ account_create_form.uid = UID
 account_create_form.currency = Валюта
 account_create_form.submit = Створити
 
-
+card_create_from.title = Додати карту
+card_create_from.card_name = Назва
+card_create_from.card_number = Номер карти
+card_create_from.expiration_date = Термін дії
+card_create_from.submit = Додати
 
 
 
