i18n for navigation.jspf

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -10,8 +10,20 @@ card_create_from.card_number = Card number
 card_create_from.expiration_date = Expiration date
 card_create_from.submit = Submit
 
+item_per_page.items_per_page = items per page
+item_per_page.all_items = All items
 
-
+navigation.navbar.users = Users
+navigation.navbar.accounts = Accounts
+navigation.navbar.payments = Payments
+navigation.navbar.cards = Cards
+navigation.navbar.logout = Logout
+navigation.user.info.title = Information
+navigation.user.info.login = Login
+navigation.user.info.first_name = First name
+navigation.user.info.last_name = Last name
+navigation.user.info.day_of_birth = Day of birth
+navigation.user.info.logout = Logout
 
 
 .anchor.all_orders = All orders
