--- a/src/main/resources/resources_uk.properties
+++ b/src/main/resources/resources_uk.properties
@@ -10,6 +10,21 @@ card_create_from.card_number = Номер карти
 card_create_from.expiration_date = Термін дії
 card_create_from.submit = Додати
 
+item_per_page.items_per_page = об'єктів на стор.
+item_per_page.all_items = Показати все
+
+navigation.navbar.users = Користувачі
+navigation.navbar.accounts = Рахунки
+navigation.navbar.payments = Платежі
+navigation.navbar.cards = Картки
+navigation.navbar.logout = Вихід
+navigation.user.info.title = Інформація
+navigation.user.info.login = Логін
+navigation.user.info.first_name = Ім'я
+navigation.user.info.last_name = Прізвище
+navigation.user.info.day_of_birth = Дата народження
+navigation.user.info.logout = Вихід
+
 
 
 header_jspf.anchor.all_orders = \u0417\u0430\u043A\u0430\u0437\u044B
