i18n for error.page.jsp

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -25,6 +25,11 @@ navigation.user.info.last_name = Last name
 navigation.user.info.day_of_birth = Day of birth
 navigation.user.info.logout = Logout
 
+access_denied.title = Access denied
+access_denied.header = Access to this page is restricted
+access_denied.message = You don't have access to this page
+
+error_page.title = Error!
 
 .anchor.all_orders = All orders
 header_jspf.anchor.login      = Login
