--- a/src/main/resources/resources_uk.properties
+++ b/src/main/resources/resources_uk.properties
@@ -25,6 +25,14 @@ navigation.user.info.last_name = Прізвище
 navigation.user.info.day_of_birth = Дата народження
 navigation.user.info.logout = Вихід
 
+access_denied.title = Доступ заборонено
+access_denied.header = Доступ до цієї сторінки обмежено
+access_denied.message = У вас менає прав доступу до даної сторінки
+
+error_page.title = Помилка!
+
+
+
 
 
 header_jspf.anchor.all_orders = \u0417\u0430\u043A\u0430\u0437\u044B
