i18n for form.create.payment.jsp

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -31,6 +31,24 @@ access_denied.message = You don't have access to this page
 
 error_page.title = Error!
 
+form_create_payment.title = Payment page
+form_create_payment.sender.title = From
+form_create_payment.recipient.title = To
+form_create_payment.recipient.type.card = Card
+form_create_payment.recipient.type.account = Account
+form_create_payment.recipient.check = Check
+form_create_payment.recipient.unknown_user = Unknown user
+form_create_payment.recipient.status.ready = Ready
+form_create_payment.recipient.status.submitted = Submitted
+form_create_payment.recipient.currency = Currency
+form_create_payment.recipient.sum = Sum
+form_create_payment.recipient.calculate = Calculate
+form_create_payment.recipient.commission = Commission
+form_create_payment.recipient.total = Total
+form_create_payment.recipient.submit = Submit payment
+
+
+
 .anchor.all_orders = All orders
 header_jspf.anchor.login      = Login
 header_jspf.anchor.logout     = Logout
