--- a/src/main/resources/resources_uk.properties
+++ b/src/main/resources/resources_uk.properties
@@ -31,7 +31,21 @@ access_denied.message = У вас менає прав доступу до дан
 
 error_page.title = Помилка!
 
-
+form_create_payment.title = Сторінка рахунків
+form_create_payment.sender.title = Відправник
+form_create_payment.recipient.title = Отримувач
+form_create_payment.recipient.type.card = Карта
+form_create_payment.recipient.type.account = Рахунок
+form_create_payment.recipient.check = Перевірити
+form_create_payment.recipient.unknown_user = Не відомий користувач
+form_create_payment.recipient.status.ready = Підготувати
+form_create_payment.recipient.status.submitted = Надіслати
+form_create_payment.recipient.currency = Валюта
+form_create_payment.recipient.sum = Сума
+form_create_payment.recipient.calculate = Розрахувати
+form_create_payment.recipient.commission = Комісія
+form_create_payment.recipient.total = Всього
+form_create_payment.recipient.submit = Створити платіж 
 
 
 
