i18n for form.create.user.jsp

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -47,7 +47,21 @@ form_create_payment.recipient.commission = Commission
 form_create_payment.recipient.total = Total
 form_create_payment.recipient.submit = Submit payment
 
-
+form_create_user.title = Register vPay
+form_create_user.user.title = Registration form
+form_create_user.user.photo = Photo
+form_create_user.user.login = Login
+form_create_user.user.password = Password
+form_create_user.user.confirm_password = Confirm password
+form_create_user.user.email = Email
+form_create_user.user.first_name = First name
+form_create_user.user.last_name = Last name
+form_create_user.user.date_of_birth = Date of birth
+form_create_user.user.sex = Sex
+form_create_user.user.sex.male = Male
+form_create_user.user.sex.female = Female
+form_create_user.user.sex.other = Other
+form_create_user.user.submit = Register
 
 .anchor.all_orders = All orders
 header_jspf.anchor.login      = Login
