--- a/src/main/resources/resources_uk.properties
+++ b/src/main/resources/resources_uk.properties
@@ -47,6 +47,22 @@ form_create_payment.recipient.commission = Комісія
 form_create_payment.recipient.total = Всього
 form_create_payment.recipient.submit = Створити платіж 
 
+form_create_user.title = Реєстрація в системі vPay
+form_create_user.user.title = Форма реєстрації
+form_create_user.user.photo = Фото
+form_create_user.user.login = Логін
+form_create_user.user.password = Пароль
+form_create_user.user.confirm_password = Підтвердити пароль
+form_create_user.user.email = Email
+form_create_user.user.first_name = Ім'я
+form_create_user.user.last_name = Прізвище
+form_create_user.user.date_of_birth = Дата народження
+form_create_user.user.sex = Стать
+form_create_user.user.sex.male = Чоловіча
+form_create_user.user.sex.female = Жіноча
+form_create_user.user.sex.other = Інше
+form_create_user.user.submit = Зараєструвати
+
 
 
 header_jspf.anchor.all_orders = \u0417\u0430\u043A\u0430\u0437\u044B
