i18n for index.jsp

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -63,6 +63,15 @@ form_create_user.user.sex.female = Female
 form_create_user.user.sex.other = Other
 form_create_user.user.submit = Register
 
+index.login_page.title = Login vPay
+index.login_page.login = Username
+index.login_page.password = Password
+index.login_page.submit = Login
+index.login_page.registration = Registration
+
+
+
+
 .anchor.all_orders = All orders
 header_jspf.anchor.login      = Login
 header_jspf.anchor.logout     = Logout
