i18n for list.accounts.jsp

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -70,6 +70,19 @@ index.login_page.submit = Login
 index.login_page.registration = Registration
 
 
+list_accounts.title = Account page
+list_accounts.sort.by_name = Sort by Name
+list_accounts.sort.by_balance = Sort by Balance
+list_accounts.sort.by_uid = Sort by UID
+list_accounts.add_account = Add account
+list_accounts.table.header.name = Name
+list_accounts.table.header.uid = UID
+list_accounts.table.header.currency = Currency
+list_accounts.table.header.balance = Balance
+list_accounts.table.header.owner = Owner
+list_accounts.table.header.status = Status
+list_accounts.table.header.action = Action
+list_accounts.table.header.card = Card
 
 
 .anchor.all_orders = All orders
