--- a/src/main/resources/resources_uk.properties
+++ b/src/main/resources/resources_uk.properties
@@ -31,7 +31,7 @@ access_denied.message = У вас менає прав доступу до дан
 
 error_page.title = Помилка!
 
-form_create_payment.title = Сторінка рахунків
+form_create_payment.title = Сторінка платежів
 form_create_payment.sender.title = Відправник
 form_create_payment.recipient.title = Отримувач
 form_create_payment.recipient.type.card = Карта
@@ -69,3 +69,16 @@ index.login_page.password = Пароль
 index.login_page.submit = Вхід
 index.login_page.registration = Зараєструватись
 
+list_accounts.title = Сторінка рахунків
+list_accounts.sort.by_name = Сортувати за ім'ям
+list_accounts.sort.by_balance = Сортувати за залишком
+list_accounts.sort.by_uid = Сортувати за UID
+list_accounts.add_account = Додати рахунок
+list_accounts.table.header.name = Назва
+list_accounts.table.header.uid = UID
+list_accounts.table.header.currency = Валюта
+list_accounts.table.header.balance = Баланс
+list_accounts.table.header.owner = Власник
+list_accounts.table.header.status = Статус
+list_accounts.table.header.action = Дії
+list_accounts.table.header.card = Картка
