i18n for list.cards.jsp

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -84,6 +84,19 @@ list_accounts.table.header.status = Status
 list_accounts.table.header.action = Action
 list_accounts.table.header.card = Card
 
+list_cards.title = Card page
+list_cards.sort.by_name = Sort by Name
+list_cards.sort.by_number = Sort by Number
+list_cards.sort.by_account = Sort by Account name
+list_cards.add_card = Add payment card
+list_cards.table.header.name = Name
+list_cards.table.header.number = Number
+list_cards.table.header.exp_date = Expiration date
+list_cards.table.header.owner = Owner
+list_cards.table.header.status = Status
+
+
+
 
 .anchor.all_orders = All orders
 header_jspf.anchor.login      = Login
