--- a/src/main/resources/resources_uk.properties
+++ b/src/main/resources/resources_uk.properties
@@ -82,3 +82,14 @@ list_accounts.table.header.owner = Власник
 list_accounts.table.header.status = Статус
 list_accounts.table.header.action = Дії
 list_accounts.table.header.card = Картка
+
+list_cards.title = Сторінка карток
+list_cards.sort.by_name = Сортувати за назвою
+list_cards.sort.by_number = Сортувати за номером
+list_cards.sort.by_account = Сотувати за назвою рахунку
+list_cards.add_card = Додати платіжну карту
+list_cards.table.header.name = Назва
+list_cards.table.header.number = Номер
+list_cards.table.header.exp_date = Термін дії
+list_cards.table.header.owner = Власник
+list_cards.table.header.status = Статус
