i18n for list.payments.jsp

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -95,6 +95,23 @@ list_cards.table.header.exp_date = Expiration date
 list_cards.table.header.owner = Owner
 list_cards.table.header.status = Status
 
+list_payments.title = Payment page
+list_payments.sort.by_guid = Sort by Guid
+list_payments.sort.by_total = Sort by Total
+list_payments.sort.by_acs_time = Sort by Asc Time
+list_payments.sort.by_des_time = Sort by Des Time
+list_payments.create_payment = Create payment
+list_payments.table.header.datetime = Date Time
+list_payments.table.header.guid = GUID
+list_payments.table.header.user = User
+list_payments.table.header.sender = Sender
+list_payments.table.header.recipient = Recipient
+list_payments.table.header.currency = Currency
+list_payments.table.header.commission = Commission
+list_payments.table.header.total = Total
+list_payments.table.header.status = Status
+list_payments.table.header.action = Action
+
 
 
 
