--- a/src/main/resources/resources_uk.properties
+++ b/src/main/resources/resources_uk.properties
@@ -93,3 +93,21 @@ list_cards.table.header.number = Номер
 list_cards.table.header.exp_date = Термін дії
 list_cards.table.header.owner = Власник
 list_cards.table.header.status = Статус
+
+list_payments.title = Сторінка платежів
+list_payments.sort.by_guid = Сортувати за номером
+list_payments.sort.by_total = Сортувати за сумою
+list_payments.sort.by_acs_time = Сточатку старші
+list_payments.sort.by_des_time = Спочатку нові
+list_payments.create_payment = Create payment
+list_payments.table.header.datetime = Час
+list_payments.table.header.guid = GUID
+list_payments.table.header.user = Користувач
+list_payments.table.header.sender = Відправник
+list_payments.table.header.recipient = Отримувач
+list_payments.table.header.currency = Валюта
+list_payments.table.header.commission = Комісія
+list_payments.table.header.total = Всього
+list_payments.table.header.status = Статус
+list_payments.table.header.action = Дії
+
