i18n for list.users.jsp

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -112,7 +112,18 @@ list_payments.table.header.total = Total
 list_payments.table.header.status = Status
 list_payments.table.header.action = Action
 
-
+list_users.title = User page
+list_users.sort.by_login = Sort by Login
+list_users.sort.by_first_name = Sort by First Name
+list_users.sort.by_last_name = Sort by Last Name
+list_users.table.header.photo = Photo
+list_users.table.header.login = Login
+list_users.table.header.first_name = First Name
+list_users.table.header.last_name = Last Name
+list_users.table.header.role = Role
+list_users.table.header.date_of_birth = Date of birth
+list_users.table.header.sex = Sex
+list_users.table.header.status = Status
 
 
 .anchor.all_orders = All orders
