--- a/src/main/resources/resources_uk.properties
+++ b/src/main/resources/resources_uk.properties
@@ -111,3 +111,15 @@ list_payments.table.header.total = Всього
 list_payments.table.header.status = Статус
 list_payments.table.header.action = Дії
 
+list_users.title = Сторінка користувачів
+list_users.sort.by_login = Сортувати за логіном
+list_users.sort.by_first_name = Сортувати за іменем
+list_users.sort.by_last_name = Сортувати за прізвищем
+list_users.table.header.photo = Світлина
+list_users.table.header.login = Логін
+list_users.table.header.first_name = Ім'я
+list_users.table.header.last_name = Прізвище
+list_users.table.header.role = Роль
+list_users.table.header.date_of_birth = Дата народження
+list_users.table.header.sex = Стать
+list_users.table.header.status = Статус
