i18n action and function for application save user locale refactoring

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -19,6 +19,8 @@ navigation.navbar.payments = Payments
 navigation.navbar.cards = Cards
 navigation.navbar.logout = Logout
 navigation.user.info.title = Information
+navigation.user.info.language.english = English
+navigation.user.info.language.ukrainian = Ukrainian  
 navigation.user.info.login = Login
 navigation.user.info.first_name = First name
 navigation.user.info.last_name = Last name
