--- a/src/main/resources/resources_uk.properties
+++ b/src/main/resources/resources_uk.properties
@@ -19,6 +19,8 @@ navigation.navbar.payments = Платежі
 navigation.navbar.cards = Картки
 navigation.navbar.logout = Вихід
 navigation.user.info.title = Інформація
+navigation.user.info.language.english = Англійська
+navigation.user.info.language.ukrainian = Українська  
 navigation.user.info.login = Логін
 navigation.user.info.first_name = Ім'я
 navigation.user.info.last_name = Прізвище
