--- a/src/main/resources/resources_uk.properties
+++ b/src/main/resources/resources_uk.properties
@@ -125,3 +125,20 @@ list_users.table.header.role = Роль
 list_users.table.header.date_of_birth = Дата народження
 list_users.table.header.sex = Стать
 list_users.table.header.status = Статус
+
+pdf.system.name = vPAY | СИСТЕМА ПЛАТЕЖІВ
+pdf.company.name = ТОВ "vPay System"
+pdf.company.phone = тел. 08001234321
+pdf.company.address = адреса: Київ, Хрещатик 1, 01000
+pdf.body.payment = Платіж
+pdf.body.from = від
+pdf.body.sender.title = Відправник
+pdf.body.sender.account = Рахунок
+pdf.body.sender.sum = Сума списання
+pdf.body.sender.commission = Комісія
+pdf.body.sender.total = Всього
+pdf.body.sender.datetime_title = Дата та час переказу
+pdf.body.recipient.title = Отримувач
+pdf.body.recipient.type = тип
+pdf.body.recipient.number = номер
+pdf.body.recipient.sum = Сума зарахування
