--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -142,3 +142,47 @@ pdf.body.recipient.title = Recipient
 pdf.body.recipient.type = type
 pdf.body.recipient.number = number
 pdf.body.recipient.sum = Sum for recipient
+
+javascript.pagination.previous = Previous
+javascript.pagination.page = Page
+javascript.pagination.of = of
+javascript.pagination.next = Next
+javascript.general.enabled = Enabled
+javascript.general.disabled = Disabled
+javascript.general.language.message = Language is changed
+javascript.account.table.status.disable = Disable Account
+javascript.account.table.status.enable = Enable Account
+javascript.account.table.status.waiting = Waiting for enable
+javascript.account.table.card.label = Added card to account
+javascript.account.table.card.button = Apply
+javascript.account.table.action.top_up = Top up
+javascript.account.table.action.remove = Remove
+javascript.account.table.action.card = Card
+javascript.account.select_card.message = Success! Card is changed
+javascript.account.coin_function.message = Success! Balance is changed
+javascript.account.remove.message = Success! Account was deleted
+javascript.account.status.modal.message = Account status will be changed. Are you sure?
+javascript.account.coin_function.modal.message = How much money do you want to add?
+javascript.account.remove.modal.message = Do you want to delete this account?
+javascript.card.status.modal = Card status will be changed. Are you sure?
+javascript.payment.status.ready = Ready
+javascript.payment.status.submitted = Submitted
+javascript.payment.delete.message = Success! Payment was deleted
+javascript.payment.status.modal.message = Payment status will be changed to submit. Are you sure?
+javascript.user.table.status.enable = Enable User
+javascript.user.table.status.disable = Disable User
+javascript.user.status.modal.message = User status will be changed. Are you sure?
+javascript.user.role.modal.message = User role will be changed. Are you sure?
+javascript.user.info.title = Information
+javascript.user.info.status = Status
+javascript.user.info.login = Login
+javascript.user.info.first_name = First name
+javascript.user.info.last_name = Last name
+javascript.user.info.day_of_birth = Day of birth
+javascript.user.info.sex = Sex
+javascript.user.info.email = Email
+javascript.user.info.role = Role
+
+
+
+
