--- a/src/main/resources/resources_uk.properties
+++ b/src/main/resources/resources_uk.properties
@@ -142,3 +142,34 @@ pdf.body.recipient.title = Отримувач
 pdf.body.recipient.type = тип
 pdf.body.recipient.number = номер
 pdf.body.recipient.sum = Сума зарахування
+
+javascript.pagination.previous = Попередня
+javascript.pagination.page = Сторінка
+javascript.pagination.of = з
+javascript.pagination.next = Наступна
+javascript.general.enabled = Активний
+javascript.general.disabled = Не активний
+javascript.general.language.message = Мова змінена
+javascript.account.table.status.disable = Заблокувати рахунок
+javascript.account.table.status.enable = Розблокувати рахунок
+javascript.account.table.status.waiting = Очікує розблокування
+javascript.account.table.card.label = Додана картка
+javascript.account.table.card.button = Активувати
+javascript.account.table.action.top_up = Поповнити
+javascript.account.table.action.remove = Видалити
+javascript.account.table.action.card = Картка
+javascript.account.select_card.message = Успішно! Картка змінена
+javascript.account.coin_function.message = Успішно! Баланс поповнено
+javascript.account.remove.message = Успішно! Рахунок видалено
+javascript.account.status.modal.message = Статус рахунку буде змінено. Ви впевнені?
+javascript.account.coin_function.modal.message = На яку суму у валюті поповнити?
+javascript.account.remove.modal.message = Ви дійсно бажаєте видалити рахунок?
+javascript.card.status.modal = Ви дійсно бажаєте змінити статус картки?
+javascript.payment.status.ready = Підготовлений
+javascript.payment.status.submitted = Відправлений
+javascript.payment.delete.message = Успішно! Платіж був видалений
+javascript.payment.status.modal.message = Статус платежу буде змінено на Відправлений. Ви впевнені?
+javascript.user.table.status.enable = Розблокувати користувача
+javascript.user.table.status.disable = Заблокувати користувача
+javascript.user.status.modal.message = Статус користувача буде змінено. Ви впевнені?
+javascript.user.role.modal.message = Роль користувача буде змінено. Ви впевнені?
