i18n for javascript refactoring

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -167,6 +167,7 @@ javascript.account.remove.modal.message = Do you want to delete this account?
 javascript.card.status.modal = Card status will be changed. Are you sure?
 javascript.payment.status.ready = Ready
 javascript.payment.status.submitted = Submitted
+javascript.payment.delete.modal.message = Payment status will be deleted. Are you sure?
 javascript.payment.delete.message = Success! Payment was deleted
 javascript.payment.status.modal.message = Payment status will be changed to submit. Are you sure?
 javascript.user.table.status.enable = Enable User
