i18n for javascript refactoring

--- a/src/main/resources/resources_uk.properties
+++ b/src/main/resources/resources_uk.properties
@@ -101,7 +101,7 @@ list_payments.sort.by_guid = Сортувати за номером
 list_payments.sort.by_total = Сортувати за сумою
 list_payments.sort.by_acs_time = Сточатку старші
 list_payments.sort.by_des_time = Спочатку нові
-list_payments.create_payment = Create payment
+list_payments.create_payment = Створити платіж
 list_payments.table.header.datetime = Час
 list_payments.table.header.guid = GUID
 list_payments.table.header.user = Користувач
