--- a/src/test/resources/resources_en.properties
+++ b/src/test/resources/resources_en.properties
@@ -184,6 +184,12 @@ javascript.user.info.sex = Sex
 javascript.user.info.email = Email
 javascript.user.info.role = Role
 
+error.user.create.no18_years_old = "You have to be 18 years old"
+error.user.create.first_name = "First name incorrect"
+error.user.create.last_name = "Last name incorrect"
+error.user.create.email = "Incorrect email address"
+error.user.create.password = "Password must have: more then 4 symbols; 1 lowercase letter; 1 uppercase letter; 1 symbol"
+error.user.create.confirm_password = "Password mismatch, please check password and confirm password"
 
 
 
