--- a/src/test/resources/resources_uk.properties
+++ b/src/test/resources/resources_uk.properties
@@ -183,3 +183,10 @@ javascript.user.info.day_of_birth = Дата народження
 javascript.user.info.sex = Стать
 javascript.user.info.email = Email
 javascript.user.info.role = Роль
+
+error.user.create.no18_years_old = "Вам повинно бути більше 18 років"
+error.user.create.first_name = "Імя не коректне"
+error.user.create.last_name = "Прізвище не коректне"
+error.user.create.email = "Не вірна електронна адреса"
+error.user.create.password = "Парольповинен містити: більше 4 символів; 1 малу літеру; 1 велику літеру; 1 символ"
+error.user.create.confirm_password = "Паролі не співпадають, перевірте правильність введення"
